# the-edit

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
core/: __init__.py  bq.py  config.py  exceptions.py  logging.py
docs/: ARCHITECTURE.md  DATASET.md  GLOSSARY.md  LESSONS_LEARNED.md  MODELS.md  MODEL_CARD.md  RESULTS.md  SETUP.md  TROUBLESHOOTING.md  experiment_design.md
docs/experiments/: 2026-06-20-ranker-tuning.md
docs/images/: architecture-data-flow.excalidraw  model-card-ranker.excalidraw  readme-pipeline.excalidraw
eval/: __init__.py  __main__.py  experiment.py  metrics.py
features/: __init__.py  __main__.py  audit.py  build.py
guardrails/: __init__.py  __main__.py  beyond_accuracy.py  experiment.py  reranker.py
ingestion/: __init__.py  __main__.py  checks.py  load.py  schemas.py  staging.py
legacy/: README.md  README_updated.md  fashion_analyzer.py  fashion_data.csv  fashion_insights.json  zara_fashion_analyzer.py  zara_insights.json  zara_products.csv
models/: __init__.py  __main__.py  baselines.py  fallback.py  interface.py  matrix.py  ranker.py  sampling.py  train.py  two_tower.py
reports/: beyond_accuracy.csv  model_comparison.csv  segment_parity.csv  tradeoff_curve.csv
retrieval/: __init__.py  __main__.py  build.py  recall.py
serving/: __init__.py  app.py
serving/static/: index.html
sql/features/: feat_customer.sql  feat_item.sql  training_matrix.sql
tests/: test_baselines.py  test_beyond_accuracy.py  test_bootstrap.py  test_bq.py  test_config.py  test_exceptions.py  test_fallback.py  test_feature_audit.py  test_feature_sql.py  test_glance.py  test_ingest_checks.py  test_interface.py  test_load_source.py  test_logging.py  test_matrix_features.py  test_metrics.py  test_ranker_artifacts.py  test_ranker_predict.py  test_reranker.py  test_retrieval_sql.py  test_sampling.py  test_schemas.py  test_serving.py
(+6 files in other folders)
