[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fashion-recommender"
version = "0.1.0"
description = "Two-stage H&M fashion recommender on BigQuery (SQL retrieval + LightGBM ranking)."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "google-cloud-bigquery>=3.40",
    "google-cloud-bigquery-storage>=2.24",
    "pyarrow>=16",
    "db-dtypes>=1.2",
    "pandas>=2.2",
    "catboost>=1.2",
    "scikit-learn>=1.4",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.0",
]

[tool.setuptools]
packages = ["core", "ingestion", "features", "retrieval", "models", "eval", "guardrails", "serving"]

# --- Lint / format ---------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["fvenv", "legacy", "notebooks", "google-cloud-sdk"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "N"]

[tool.ruff.lint.isort]
known-first-party = ["core", "ingestion", "features", "retrieval", "models", "eval", "guardrails", "serving"]

# --- Types -----------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
files = ["core", "ingestion", "features", "retrieval", "models", "eval", "guardrails", "serving", "tests"]
exclude = '(^|/)(fvenv|legacy|notebooks|google-cloud-sdk)/'

# --- Tests -----------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
